fixing scrollbar issue

--- a/jammming/src/App.module.css
+++ b/jammming/src/App.module.css
@@ -36,7 +36,7 @@ html {
   font-size: 1.5rem;
   line-height: 2rem;
   font-weight: 700;
-  color: #fff;
+  color: rgba(255,255,255,0.8);
 }
 
 .jammming span {
@@ -48,5 +48,5 @@ html {
   font-size: 1rem;
   line-height: 2rem;
   font-weight: 400;
-  color: #fff;
+  color: rgba(255,255,255,0.8);
 }
