--- a/jammming/src/files/containers/styles/SearchResults.module.css
+++ b/jammming/src/files/containers/styles/SearchResults.module.css
@@ -4,7 +4,7 @@
     font-size: 1rem;
     line-height: 1.5rem;
     font-weight: 600;
-    color: #fff;
+    color: rgba(255,255,255,0.8);
 }
 
 .header {
@@ -23,5 +23,5 @@
     font-size: 0.75rem;
     line-height: 1.5rem;
     font-weight: 500;
-    color: #fff;
+    color: rgba(255,255,255,0.8);
 }
